# vpp-sim

./: .better-commits.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  settings.html
.github/: CODEOWNERS
.github/workflows/: docs.yml  rust.yml
docs/: index.md
previews/pr-68/: src-files.js
previews/pr-73/: settings.html
previews/pr-74/: help.html
previews/pr-76/: crates.js  help.html
previews/pr-80/: help.html  settings.html  src-files.js
scenarios/: baseline.toml  default.toml  dr_event.toml  dr_stress.toml  high_solar.toml
search.index/: 0033ada72d23.js  03aa14986395.js  144e11650389.js  18d4ee379c4c.js  1f1d91ceff0f.js  2311e04207f1.js  25492746b99a.js  2bf4d5ca304e.js  2c3c1cca1efe.js  2f473d584552.js  2fa61c38cd45.js  346e25c8cc7b.js  348e2fd03c0b.js  34f42bc866cc.js  3cf4edea3829.js  3dfa4cf034ec.js  42b429b78762.js  48631a3c5201.js  48d560aac57e.js  491760e2e2b3.js  559e44cbfde1.js  5eaec4688348.js  603e90fc7eb0.js  6ae4729d1d59.js  6da2faab755b.js  724a71817d54.js  73191e80e057.js  75348ff1835a.js  79a7a0e61cf2.js  7ba84baf0e42.js  7ce5ca6120a1.js  7d30ee44fbff.js  7f7f1cbfffe6.js  root.js
search.index/entry/: e0c3fa86e32d.js  fc7481bbfdd7.js
search.index/generic_inverted_index/: d732e10549b3.js
src/: api.rs  cli.rs  config.rs  forecast.rs  lib.rs  main.rs  reporting.rs  runner.rs  scenario.rs  simulation.rs  telemetry.rs
tests/: api_integration.rs  integration_api.rs  integration_default.rs  integration_greedy.rs  scenario_presets_integration.rs
vpp_sim/: all.html  fn.main.html  index.html  sidebar-items.js
(+522 files in other folders)
