[package]
name = "vpp-sim"
version = "0.1.0"
edition = "2024"

[features]
api = ["dep:axum", "dep:tokio", "dep:serde_json", "dep:tower"]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
axum = { version = "0.8", optional = true }
crossterm = { version = "0.28", optional = true }
csv = "1"
rand = "0.9.2"
ratatui = { version = "0.29", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"], optional = true }
toml = "0.8"
tower = { version = "0.5", features = ["util"], optional = true }
